09_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: cepgbaseacr.azurecr.io/docker.io/openjdk:17-slim
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: my-app-pvc
          mountPath: /data
      volumes:
      - name: my-app-pvc
        persistentVolumeClaim:
          claimName: my-app-pvc
